--- a/client/amaz/src/app/app.component.html
+++ b/client/amaz/src/app/app.component.html
@@ -24,11 +24,12 @@
                     <i class="fa fa-user mr-1"></i>
 
                     <span *ngIf="!token">Account</span>
+                    <span *ngIf="data.user">{{data.user.name}}</span> 
                 </a>
 
                 <div ngbDropdownMenu class="dropdown-menu">
                       <a *ngIf="token" (click)="closeDropdown(dropdown);collapse();" routerLink="/profile" class="dropdown-item">
-                        <i class="fa fa-user-circle" aria-hidden="true"></i>Profile
+                        <i class="fa fa-user-circle" aria-hidden="true"></i>Profile 
                       </a>
 
                       <a *ngIf="!token" (click)="closeDropdown(dropdown);collapse();" routerLink="/login" class="dropdown-item">
@@ -39,7 +40,7 @@
                         <i class="fa fa-key" aria-hidden="true"></i>Logout
                       </a>
 
-                      <a *ngIf="token" (click)="closeDropdown(dropdown);collapse();" routerLink="/register" class="dropdown-item">
+                      <a *ngIf="!token" (click)="closeDropdown(dropdown);collapse();" routerLink="/register" class="dropdown-item">
                         <i class="fa fa-group" aria-hidden="true"></i>Register
                       </a>
                 </div>
