--- a/client/amaz/src/styles.scss
+++ b/client/amaz/src/styles.scss
@@ -13,7 +13,18 @@ a:hover {
 button {
     cursor: pointer;
 }
-
+ 
 section {
     min-height: 600px;
+}
+h5{
+    overflow-wrap: break-word;
+}
+.image{
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
 }
